# BankingAdvisor

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.py  blog_post.md  pyproject.toml  requirements.txt  start.bat  start.ps1  start.sh
agents/: base.py  coordinator_agent.py  executor_agent.py  explainer_agent.py  generator_agent.py  ontology_agent.py  output_controller_agent.py  planner_agent.py
core/: executor.py  foundry_client.py  schema_validate.py
data/: glossary.json  interest.json  liquidity.json  loans.json  thresholds.json  transactions.json
demo/: demo_prompts.jsonl
schemas/: query_plan.schema.json
tests/: conftest.py  test_executor.py  test_repair.py  test_schema.py
