[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "bankquery-copilot-local"
version = "0.1.0"
description = "Multi-agent banking analytics copilot with structured output control, running fully local on Foundry Local."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "openai>=1.14.0",
    "jsonschema>=4.21.0",
    "streamlit>=1.32.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
